[388038] Fixes of web-socket errors

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -10,6 +10,9 @@
   "ConnectionStrings": {
     "MySql": ""
   },
+  "Mode": "",
+  "BotAuthor": "",
   "BotToken": "",
-  "TinkoffToken": ""
+  "TinkoffToken": "",
+  "TinkoffSandboxToken": ""
 }
